--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
-  <title>JioTV LIVE</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/37fVLxB/f4027915ec9335046755d489a14472f2.png">
+  <title>JioTV</title>
+  <link rel="shortcut icon" type="image/x-icon" href="">
   <meta name="robots" content="noindex" />
   <link rel="stylesheet" href="css/darkmode.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.1.5/lazysizes.min.js"></script>
 </head>
 <body data-new-gr-c-s-check-loaded="14.1012.0" data-gr-ext-installed="">
 	<div id="jtvh1"><a href="https://github.com/avipatilpro">
-	<h1>Jio TV Live</h1></div></a>
+	<h1>Jio TV</h1></div></a>
 <div id="content">
 <div class="container">
 <div id="list" class="row">
 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
 <a href="http://localhost/play.php?c=Colors_HD&amp;q=800" class="card">
-<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Colors_HD.png" style="height: 120px">
+<img class="lazyload" data-src="" style="height: 120px">
 <div class="card-body">
 <p class="card-text">Colors_HD
 </p>
