--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <div class="container">
 <div id="list" class="row">
 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-<a href="http://localhost/play.php?c=Colors_HD&amp;q=800" class="card">
+<a href="http://ip.xtremetv.eu:8000/live/jinbox/BHap1cekM4/36075.ts" class="card">
 <img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Colors_HD.png" style="height: 120px">
 <div class="card-body">
-<p class="card-text">Colors_HD
+<p class="card-text">Js_HD
 </p>
 </div>
 </a>
@@ -4570,6 +4570,120 @@
 </div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
 <a href="http://localhost/play.php?c=Udaya_Music&amp;q=800" class="card">
 <img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Udaya_Music.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Udaya_Music
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Sun_Music&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Sun_Music.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Sun_Music
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Gemini_Music&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Gemini_Music.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Gemini_Music
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Surya_Music&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Surya_Music.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Surya_Music
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Raj_Musix&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Raj_Musix.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Raj_Musix
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Sahana_Music&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Sahana_Music.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Sahana_Music
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Tarang_Music&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Tarang_Music.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Tarang_Music
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Public_Music&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Public_Music.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Public_Music
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Tunes_6&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Tunes_6.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Tunes_6
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=News_18_Tamilnadu&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/News_18_Tamilnadu.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">News_18_Tamilnadu
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=North_East_Live&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/North_East_Live.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">North_East_Live
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Channel_News_Asia_International&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Channel_News_Asia_International.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Channel_News_Asia_International
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=CVR_OM_Spiritual&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/CVR_OM_Spiritual.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">CVR_OM_Spiritual
+</p>
+</div>
+</a>
+</div><div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
+<a href="http://localhost/play.php?c=Travel_XP_Tamil&amp;q=800" class="card">
+<img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Travel_XP_Tamil.png" style="height: 120px">
+<div class="card-body">
+<p class="card-text">Travel_XP_Tamil</p>
+</div>
+</a>
+</div>
+</div>
+</div>
+</div>
+</body></html>
+
 <div class="card-body">
 <p class="card-text">Udaya_Music
 </p>
