--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="container">
 <div id="list" class="row">
 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2">
-<a href="http://ip.xtremetv.eu:8000/live/jinbox/BHap1cekM4/36075.ts" class="card">
+<a href="https://zee5-rds.herokuapp.com/?c=0-9-zeecinema" class="card">
 <img class="lazyload" data-src="http://jiotv.catchup.cdn.jio.com/dare_images/images/Colors_HD.png" style="height: 120px">
 <div class="card-body">
 <p class="card-text">Js_HD
